installed swagger
